loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:6: error: not found: type Blue
setCouleurBrosse(c:Blue)
                   ^LoopStairs:6: error: not found: value c
setCouleurBrosse(c:Blue)
                 ^