loopfor.LoopStairs.scala.code
baisseBrosse()
avance(3)
leveBrosse()
gauche()
avance()
setCouleurBrosse(c:Blue)
baisseBrosse()
avance()
leveBrosse()